# ironclaw

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.test  FEATURE_PARITY.md  clippy.toml  codecov.yml  ironclaw.zsh
.github/scripts/: create-labels.sh  pr-body-utils.sh  update-release-plz-body.sh  update-staging-promotion-body.sh
.github/workflows/: coverage.yml  regression-test-check.yml  release-plz-batch-summary.yml  release-plz.yml  staging-ci.yml  staging-promotion-metadata.yml
channels-src/discord/: build.sh
channels-src/telegram/src/: lib.rs
channels-src/whatsapp/: build.sh
migrations/: V10__add_retry_attempts.sql
registry/channels/: discord.json  slack.json  telegram.json  whatsapp.json
registry/tools/: slack.json  telegram.json  web-search.json
scripts/: commit-msg-regression.sh  dev-setup.sh
skills/local-test/: SKILL.md
src/: app.rs  bootstrap.rs  config.rs  error.rs  main.rs  service.rs  settings.rs  testing.rs
src/agent/: agent_loop.rs  commands.rs  dispatcher.rs  job_monitor.rs  routine_engine.rs  scheduler.rs  submission.rs  thread_ops.rs  worker.rs
src/channels/: repl.rs  signal.rs
src/channels/wasm/: loader.rs  router.rs  wrapper.rs
src/channels/web/: mod.rs  server.rs  sse.rs  types.rs  util.rs  ws.rs
src/channels/web/handlers/: chat.rs  extensions.rs  jobs.rs  memory.rs  routines.rs  skills.rs  static_files.rs
src/channels/web/static/: app.js  index.html  style.css
src/cli/: completion.rs  doctor.rs  mod.rs  oauth_defaults.rs  status.rs  tool.rs
src/cli/snapshots/: ironclaw__cli__tests__help_output.snap  ironclaw__cli__tests__long_help_output.snap
src/config/: channels.rs  database.rs  embeddings.rs  hygiene.rs  llm.rs  mod.rs  skills.rs  wasm.rs
src/context/: fallback.rs  memory.rs  mod.rs
src/db/: libsql_migrations.rs  mod.rs  postgres.rs  tls.rs
src/db/libsql/: conversations.rs  jobs.rs  mod.rs  routines.rs  workspace.rs
src/extensions/: discovery.rs  manager.rs  mod.rs  registry.rs
src/history/: mod.rs  store.rs
src/llm/: failover.rs  mod.rs  nearai.rs  nearai_chat.rs  retry.rs  session.rs
src/orchestrator/: api.rs  job_manager.rs
src/pairing/: store.rs
src/registry/: installer.rs  manifest.rs
src/safety/: mod.rs
src/sandbox/: detect.rs
src/secrets/: store.rs  types.rs
src/setup/: README.md  channels.rs  mod.rs  prompts.rs  wizard.rs
src/skills/: gating.rs
src/tools/: mod.rs  registry.rs  retry.rs  tool.rs
src/tools/builtin/: http.rs  job.rs  memory.rs  message.rs  mod.rs  web_fetch.rs
src/tools/mcp/: auth.rs  config.rs
src/tools/wasm/: capabilities_schema.rs  credential_injector.rs  mod.rs  runtime.rs
src/tunnel/: tailscale.rs
src/worker/: job.rs  runtime.rs
src/workspace/: README.md  document.rs  embedding_cache.rs  hygiene.rs  mod.rs  repository.rs  search.rs
tests/: openai_compat_integration.rs  tool_schema_validation.rs  wasm_channel_integration.rs  workspace_integration.rs  ws_gateway_integration.rs
tests/e2e/: conftest.py
tools-src/github/: github-tool.capabilities.json
tools-src/gmail/: gmail-tool.capabilities.json
tools-src/google-calendar/: google-calendar-tool.capabilities.json
tools-src/google-docs/: google-docs-tool.capabilities.json
tools-src/google-drive/: google-drive-tool.capabilities.json
tools-src/google-sheets/: google-sheets-tool.capabilities.json
tools-src/google-slides/: google-slides-tool.capabilities.json
tools-src/slack/: slack-tool.capabilities.json
tools-src/telegram/: telegram-tool.capabilities.json
tools-src/web-search/: Cargo.toml  web-search-tool.capabilities.json
tools-src/web-search/src/: lib.rs
