[package]
name = "web-search-tool"
version = "0.1.0"
edition = "2021"
description = "Brave Web Search tool for IronClaw (WASM component)"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.41.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1


[workspace]
